recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:2: error: Missing closing brace `}' assumed here
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
^